change database to h2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,60 @@
-spring.application.name=smart-AttendenceSystem
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://sql12.freesqldatabase.com:3306/sql12800148
-spring.datasource.username=sql12800148
-spring.datasource.password=EmbqQWuTDv
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# =====================================================================
+#                        Spring Boot Application Properties
+# =====================================================================
 
-# Hibernate Configuration
+# Application Name
+spring.application.name=smart-AttendenceSystem
+
+# ----------------------------------------------------------------------
+# --- H2 EMBEDDED DATABASE CONFIGURATION (PERSISTENT FILE-BASED) ---
+# ----------------------------------------------------------------------
+
+# 1. DRIVER: H2 Driver
+spring.datasource.driver-class-name=org.h2.Driver
+
+# 2. URL: FILE-BASED mode for persistence.
+#    The database file will be created in your user's home directory (e.g., C:\Users\YourUser\smartAttendanceDB.mv.db).
+#    DB_CLOSE_DELAY=-1 keeps the database open even after the last connection is closed.
+#    This is crucial for the H2 Console to connect while your application is running.
+spring.datasource.url=jdbc:h2:file:~/smartAttendanceDB;DB_CLOSE_DELAY=-1;
+spring.datasource.username=sa
+spring.datasource.password=
+
+# ----------------------------------------------------------------------
+# --- Hibernate Configuration ---
+# ----------------------------------------------------------------------
+
+# NOTE: Hibernate will attempt to create/update the schema in the H2 file database.
+# 'update' is good for development as it updates schema without dropping existing data.
+# For production, consider 'validate' or 'none' and use Flyway/Liquibase for migrations.
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# ----------------------------------------------------------------------
+# --- DATABASE INITIALIZATION (FIX for data.sql) ---
+# ----------------------------------------------------------------------
+
+# 🔑 FIX: This property forces Spring Boot to run data.sql scripts
+#         even when Hibernate is managing the schema (due to ddl-auto=update).
+spring.sql.init.mode=always
+
+# ----------------------------------------------------------------------
+# --- H2 Console (FOR LOCAL TESTING ONLY) ---
+# ----------------------------------------------------------------------
+
+# Enables the web console at http://localhost:8080/h2-console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# IMPORTANT: When connecting to the H2 console, use the exact JDBC URL from above:
+# JDBC URL: jdbc:h2:file:~/smartAttendanceDB
+# User Name: sa
+# Password: (leave empty if none configured)
+
+# ----------------------------------------------------------------------
+# --- JSP View Resolver ---
+# ----------------------------------------------------------------------
+# Configuration for resolving JSP files for your Spring MVC views.
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
-
